fixed hibernate search