@@ -5,6 +5,7 @@ import com.mds.i18n.model.Culture;
 import com.mds.i18n.service.CultureManager;
 import com.mds.i18n.service.CultureService;
 import com.mds.util.ConvertUtil;
+import com.google.common.collect.Lists;
 import com.mds.common.exception.RecordExistsException;
 import com.mds.common.model.search.Searchable;
 import com.mds.common.service.impl.GenericManagerImpl;
@@ -18,11 +19,16 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort.Direction;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Locale;
+import java.util.stream.Collectors;
+
 import javax.jws.WebService;
+import javax.servlet.http.HttpServletRequest;
 import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.Response;
 
@@ -42,7 +48,7 @@ public class CultureManagerImpl extends GenericManagerImpl<Culture, Long> implem
      */
     @Override
     public Culture getCulture(final String cultureId) {
-        return cultureDao.get(new Long(cultureId));
+        return cultureDao.get(Long.valueOf(cultureId));
     }
 
     /**
@@ -83,6 +89,59 @@ public class CultureManagerImpl extends GenericManagerImpl<Culture, Long> implem
      */
     @SuppressWarnings("unchecked")
 	@Override
+    public HashMap<String, Object> availableCulturesSelect2(String searchTerm, Integer limit, Integer offset, HttpServletRequest request) {
+        final Locale[] available = Locale.getAvailableLocales();
+        List<Culture> cultures = Lists.newArrayList();
+        for (int i = 0; i < available.length; i++) {
+        	String languageTag = available[i].getLanguage();
+        	if (StringUtils.isNotBlank(available[i].getCountry())){
+        		languageTag =  languageTag + "_" + available[i].getCountry();
+        	}
+        	
+        	if (StringUtils.isBlank(searchTerm) || languageTag.startsWith(searchTerm) 
+        			|| available[i].getDisplayName().startsWith(searchTerm)) {
+        		cultures.add(new Culture(languageTag, available[i].getDisplayName()));
+        	}
+			/*
+			 * final String iso = available[i].getCountry(); final String name =
+			 * available[i].getDisplayCountry(locale);
+			 */
+		}
+        if (cultures.size() == 0) {
+        	for (int i = 0; i < available.length; i++) {
+            	String languageTag = available[i].getLanguage();
+            	if (StringUtils.isNotBlank(available[i].getCountry())){
+            		languageTag =  languageTag + "_" + available[i].getCountry();
+            	}
+            	
+            	if (StringUtils.isBlank(searchTerm) || languageTag.contains(searchTerm) 
+            			|| available[i].getDisplayName().contains(searchTerm)) {
+            		cultures.add(new Culture(languageTag, available[i].getDisplayName()));
+            	}
+    		}
+        }
+
+        cultures = cultures.stream().sorted(Comparator.comparing(Culture::getCultureCode)).collect(Collectors.toList());
+        List<HashMap<String,Object>> list = new LinkedList<HashMap<String,Object>>();
+        for (Culture u : cultures) {           
+			//culture list
+			HashMap<String, Object> mapData = new LinkedHashMap<String, Object>();
+			mapData.put("text", u.getCultureName());//culture name
+			mapData.put("selected", false);//status
+			mapData.put("id", u.getCultureCode());//culture id
+			list.add(mapData);
+		}
+		HashMap<String,Object> resultData = new LinkedHashMap<String, Object>();
+		resultData.put("results", list);
+		
+		return resultData;
+    }
+    
+    /**
+     * {@inheritDoc}
+     */
+    @SuppressWarnings("unchecked")
+	@Override
     public HashMap<String, Object> culturesTable(String searchTerm, Integer limit, Integer offset) {
     	Pageable pageable = PageRequest.of(offset/limit, limit);
     	Searchable searchable = Searchable.newSearchable();
@@ -98,11 +157,48 @@ public class CultureManagerImpl extends GenericManagerImpl<Culture, Long> implem
     	
     	HashMap<String,Object> resultData = new LinkedHashMap<String, Object>();
     	resultData.put("total", list.getTotalElements());
-		resultData.put("rows", list.getContent());
+		resultData.put("rows", toBootstrapTableData(list.getContent()));
 		
 		return resultData;
 		
     }
+    
+    /**
+	 * convert permission data to select2 format(https://select2.org/data-sources/formats)
+	 * {
+	 *	  "results": [
+	 *	    {
+	 *	      "id": 1,
+	 *	      "text": "Option 1"
+	 *    	},
+	 *	    {
+	 *	      "id": 2,
+	 *	      "text": "Option 2",
+	 *	      "selected": true
+	 *	    },
+	 *	    {
+	 *	      "id": 3,
+	 *	      "text": "Option 3",
+	 *	      "disabled": true
+	 *	    }
+	 *	  ]
+	 *	}
+	 * @param permissions
+	 * @return
+	 */
+	private  List<HashMap<String,Object>> toBootstrapTableData(List<Culture> cultures){
+		List<HashMap<String,Object>> list = new LinkedList<HashMap<String,Object>>();
+		for (Culture u : cultures) {
+			//permission list
+			HashMap<String, Object> mapData = new LinkedHashMap<String, Object>();
+			mapData.put("cultureName", u.getCultureName());//culture description
+			mapData.put("cultureCode", u.getCultureCode());//culture name
+			mapData.put("id", u.getId());//permission id
+			list.add(mapData);
+		}
+				
+		return list;
+	}
 
     /**
      * {@inheritDoc}
@@ -167,7 +263,7 @@ public class CultureManagerImpl extends GenericManagerImpl<Culture, Long> implem
 			HashMap<String, Object> mapData = new LinkedHashMap<String, Object>();
 			mapData.put("text", u.getCultureName());//culture name
 			mapData.put("selected", false);//status
-			mapData.put("id", u.getCultureCode());//culture id
+			mapData.put("id", u.getId());//culture id
 			list.add(mapData);
 		}
 		HashMap<String,Object> resultData = new LinkedHashMap<String, Object>();
